<resources>
    <string name="app_name">Kenklin</string>
    <string name="no_req_txt">No recent requests made</string>
    <string name="service_req">Service Request</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm">Confirm</string>
    <string name="app_logo">app logo</string>
    <string name="acc_ask_txt">Dont have an account?</string>
    <string name="reg_txt"><u>Sign up here</u></string>
    <string name="register">Register</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="phone_valid_intro">We will send you a one time SMS message to verify your phone number. Enter the <b>6-digit code</b> below</string>
    <string name="resend_code_in">Resend code in: 0:</string>
    <string name="verifying">Verifying…</string>
    <string name="verify">Verify</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="records_ref">Records</string>
    <string name="all_users">AppUsers</string>
    <string name="loading">Loading…</string>
    <string name="service">Service</string>
    <string name="select_lbl">Select…</string>
    <string name="select_service">Select Service</string>
    <string name="no_show">Nothing to show</string>
    <string name="logging_in">Logging in…</string>
    <string name="ent_numb_login">Enter mobile number to login</string>
    <string name="gh_currency">GH¢</string>
    <string name="equals_sign">=</string>
    <string name="total_lbl">Total</string>
    <string name="cancel_order_lbl">Cancel Order</string>
    <string name="delete_lbl">Delete</string>
</resources>
