<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="@dimen/logo_dim"
        android:layout_height="@dimen/logo_dim"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@id/input_login_numb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/ent_numb_login"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/input_login_numb"
        app:layout_constraintLeft_toLeftOf="@id/input_login_numb"
        app:layout_constraintRight_toRightOf="@id/input_login_numb" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_login_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_rounded_border"
        android:padding="@dimen/margin_tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_numb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="@dimen/normal_text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:background="@drawable/app_button_background"
        android:onClick="confirm_login_number"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/input_login_numb"
        app:layout_constraintRight_toRightOf="@id/input_login_numb"
        app:layout_constraintTop_toBottomOf="@id/input_login_numb" />

    <ProgressBar
        android:id="@+id/probar_login"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/input_login_numb"
        app:layout_constraintRight_toRightOf="@id/input_login_numb"
        app:layout_constraintTop_toBottomOf="@id/bt_confirm" />

    <TableRow
        android:padding="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:onClick="Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_ask_txt"
            android:textSize="@dimen/med_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:text="@string/reg_txt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/med_text"
            android:textStyle="bold" />

    </TableRow>


</android.support.constraint.ConstraintLayout>