<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_tiny"
    android:background="#F3F0F3"
    android:padding="@dimen/margin_tiny">

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="@dimen/margin_tiny"
        app:layout_constraintRight_toLeftOf="@id/tv_item_multp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_multp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/normal_text"
        android:layout_marginEnd="@dimen/margin_tiny"
        android:textStyle="italic"
        app:layout_constraintRight_toLeftOf="@id/tv_item_eqls"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        />

    <TextView
        android:text="@string/equals_sign"
        android:layout_marginEnd="1dp"
        android:id="@+id/tv_item_eqls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:layout_constraintRight_toLeftOf="@id/tv_item_amt_sum"
        app:layout_constraintTop_toTopOf="@id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_amt_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toLeftOf="@id/tv_item_curr"
        app:layout_constraintTop_toTopOf="@id/tv_item_name" />

    <TextView
        android:textSize="@dimen/normal_text"
        android:text="@string/gh_currency"
        android:id="@+id/tv_item_curr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_item_name" />


</android.support.constraint.ConstraintLayout>